Fixed invisible slider arrow when hover over inner product item

--- a/web/css/layout/_pagebuilder.less
+++ b/web/css/layout/_pagebuilder.less
@@ -178,7 +178,7 @@
     .slick-arrow {
         &:extend(.button-reset all);
         position: absolute;
-        z-index: 10;
+        z-index: 11;
         top: 50%;
         width: 35px;
         height: 60px;
